force-app/main/default/objects/Financialinformation__c/Financialinformation__c.object-meta.xml
<CustomObject>
    <label>Financial information</label>
    <nameField>
        <label>Closing Date</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Financial information</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>