force-app/main/default/objects/Financialinformation__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Financial information</relationshipLabel>
    <relationshipName>Financial_information</relationshipName>
    <type>Lookup</type>
</CustomField>