force-app/main/default/objects/Financialinformation__c/fields/BizRegNo__c.field-meta.xml
<CustomField>
    <fullName>BizRegNo__c</fullName>
    <label>Biz. Reg. No.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>