force-app/main/default/objects/Financialinformation__c/fields/InformationSource__c.field-meta.xml
<CustomField>
    <fullName>InformationSource__c</fullName>
    <label>Information Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>