force-app/main/default/objects/Financialinformation__c/fields/NetIncome__c.field-meta.xml
<CustomField>
    <fullName>NetIncome__c</fullName>
    <label>Net Income</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>