force-app/main/default/objects/Financialinformation__c/fields/OperatingProfit__c.field-meta.xml
<CustomField>
    <fullName>OperatingProfit__c</fullName>
    <label>Operating Profit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>