force-app/main/default/objects/Financialinformation__c/fields/TotalAssets__c.field-meta.xml
<CustomField>
    <fullName>TotalAssets__c</fullName>
    <label>Total Assets</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>