force-app/main/default/objects/Financialinformation__c/fields/TotalCapital__c.field-meta.xml
<CustomField>
    <fullName>TotalCapital__c</fullName>
    <label>Total Capital</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>