force-app/main/default/objects/Financialinformation__c/fields/TotalLiabilities__c.field-meta.xml
<CustomField>
    <fullName>TotalLiabilities__c</fullName>
    <label>Total Liabilities</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>